@@ -31,6 +31,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #658749: asyncore's connect() method now correctly interprets winsock
+  errors.
+
 - Issue #9501: Fixed logging regressions in cleanup code.
 
 - Issue #9214: Set operations on KeysView or ItemsView in the collections
